@@ -593,7 +593,7 @@ public class ODatabaseForm extends TestCase {
         params.add(Short.valueOf((short) 234)) ;
         params.add(Integer.valueOf(12345)) ;
         params.add(Long.valueOf(23456)) ;
-        params.add(new Float(1.234)) ;
+        params.add(Float.valueOf(1.234f)) ;
         params.add(new Double(2.345)) ;
         params.add(new byte[] {1, 2, 3}) ;
         Date d = new Date();
