@@ -747,7 +747,7 @@ XMultiPropertySet
         else if (cl.equals(long.class))
             retVal= Long.valueOf(AnyConverter.toLong(obj));
         else if (cl.equals(float.class))
-            retVal= new Float(AnyConverter.toFloat(obj));
+            retVal= Float.valueOf(AnyConverter.toFloat(obj));
         else if (cl.equals(double.class))
             retVal= new Double(AnyConverter.toDouble(obj));
         else if (cl.equals(String.class))
@@ -769,7 +769,7 @@ XMultiPropertySet
         else if (cl.equals(Long.class))
             retVal= Long.valueOf(AnyConverter.toLong(obj));
         else if (cl.equals(Float.class))
-            retVal= new Float(AnyConverter.toFloat(obj));
+            retVal= Float.valueOf(AnyConverter.toFloat(obj));
         else if (cl.equals(Double.class))
             retVal= new Double(AnyConverter.toDouble(obj));
         else if (XInterface.class.isAssignableFrom(cl))
